test/spec_vectors/unreached-invalid/fail/module_13.wat
(module (func $type-unary-num-vs-void-after-break (block (br 0) (block (drop (i32.eqz (nop)))))))